manifests/shoppingapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shopping-api
  template:
    metadata:
      labels:
        app: shopping-api
    spec:
      tolerations:
      - key: app
        operator: Equal
        value: shopping-api
        effect: NoSchedule
      nodeSelector:
        app: shopping-api
      containers:
      - name: shopping-api
        image: <ACR Name>/shopping-api:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: shoppingapi-service
spec:
  ports:
  - protocol: TCP
    port: 80
  selector:
    app: shopping-api
