manifests/shoppingclient.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-client
spec:
  replicas: 3
  selector:
    matchLabels:
      app: shopping-client
  template:
    metadata:
      labels:
        app: shopping-client
    spec:
      tolerations:
      - key: app
        operator: Equal
        value: shopping-client
        effect: NoSchedule
      nodeSelector:
          app: shopping-client
      containers:
      - name: shopping-client
        image: <ACR Name>/shopping-client:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: shopping-client
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
  selector:
    app: shopping-client
